--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_2.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,11 +19,9 @@
      "output_type": "stream",
      "text": [
       "CSV files have been generated: crm_customers.csv, erp_customers.csv\n",
-      "Conflicting emails found:\n",
-      "   customer_id               email_crm               email_erp\n",
-      "0        12345    john.doe@example.com  johnny.doe@example.com\n",
-      "1        67890  jane.smith@example.com      jsmith@example.com\n",
-      "Number of conflicting emails: 2\n"
+      "Error loading file crm_customers.csv: Usecols do not match columns, columns expected but not found: ['product_id']\n",
+      "Error loading file erp_customers.csv: Usecols do not match columns, columns expected but not found: ['product_id']\n",
+      "Error: One or more files could not be loaded.\n"
      ]
     }
    ],
@@ -60,28 +58,54 @@
     "print(\"CSV files have been generated: crm_customers.csv, erp_customers.csv\")\n",
     "\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "# Step 1: Load the datasets\n",
-    "crm_df = pd.read_csv('crm_customers.csv')  # Replace with the actual path of your crm_customers.csv\n",
-    "erp_df = pd.read_csv('erp_customers.csv')  # Replace with the actual path of your erp_customers.csv\n",
+    "# Function to check if file exists\n",
+    "def check_file_exists(file_path):\n",
+    "    if not os.path.isfile(file_path):\n",
+    "        raise FileNotFoundError(f\"The file {file_path} does not exist.\")\n",
+    "    \n",
+    "# Function to load datasets with error handling\n",
+    "def load_data(file_path, columns=None):\n",
+    "    try:\n",
+    "        check_file_exists(file_path)\n",
+    "        df = pd.read_csv(file_path, usecols=columns) if columns else pd.read_csv(file_path)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading file {file_path}: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Step 2: Merge the datasets on 'customer_id'\n",
-    "merged_df = pd.merge(crm_df, erp_df, on='customer_id', suffixes=('_crm', '_erp'))\n",
+    "# Function to find conflicting emails\n",
+    "def find_conflicting_emails(crm_file, erp_file):\n",
+    "    # Columns to check for\n",
+    "    columns = ['product_id', 'email']\n",
     "\n",
-    "# Step 3: Identify conflicting emails (where the emails do not match between the CRM and ERP datasets)\n",
-    "conflicting_emails = merged_df[merged_df['email_crm'] != merged_df['email_erp']]\n",
+    "    # Load CRM and ERP datasets\n",
+    "    crm_df = load_data(crm_file, columns)\n",
+    "    erp_df = load_data(erp_file, columns)\n",
     "\n",
-    "# Step 4: Display the conflicting records\n",
-    "print(\"Conflicting emails found:\")\n",
-    "print(conflicting_emails[['customer_id', 'email_crm', 'email_erp']])\n",
+    "    if crm_df is None or erp_df is None:\n",
+    "        print(\"Error: One or more files could not be loaded.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Merge datasets on 'email' column to find conflicts\n",
+    "    merged = pd.merge(crm_df, erp_df, on='email', how='outer', indicator=True)\n",
     "\n",
-    "# Step 5: Optionally save the conflicting records to a new CSV file for further analysis\n",
-    "conflicting_emails.to_csv('conflicting_emails.csv', index=False)\n",
+    "    # Filter for conflicting emails (rows that are only present in one of the datasets)\n",
+    "    conflicting_emails = merged[merged['_merge'] != 'both']\n",
+    "    \n",
+    "    if conflicting_emails.empty:\n",
+    "        print(\"No conflicting emails found.\")\n",
+    "    else:\n",
+    "        print(\"Conflicting emails found:\")\n",
+    "        print(conflicting_emails)\n",
     "\n",
-    "# Step 6: Print the number of conflicting email records\n",
-    "print(f\"Number of conflicting emails: {conflicting_emails.shape[0]}\")\n",
+    "# Specify file paths\n",
+    "crm_file = 'crm_customers.csv'\n",
+    "erp_file = 'erp_customers.csv'\n",
     "\n",
-    "\n"
+    "# Call the function to find conflicting emails\n",
+    "find_conflicting_emails(crm_file, erp_file)\n"
    ]
   }
  ],
