--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_4.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_4.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2 products with inconsistent categories.\n",
+      "Inconsistent data found:\n",
       "   product_id category_A category_B\n",
       "1           2   Clothing    Apparel\n",
       "3           4       Toys       Kids\n"
@@ -72,48 +72,76 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the datasets\n",
-    "def load_product_data(file_path):\n",
-    "    \"\"\"Load product data from a CSV file.\"\"\"\n",
+    "# Function to load CSV file and validate if the necessary columns exist and the dataset is not empty\n",
+    "def load_and_validate_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Load CSV file and validate if the necessary columns exist and the dataset is not empty.\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "        df = pd.read_csv(file_path)\n",
-    "        if 'product_id' not in df.columns or 'category' not in df.columns:\n",
-    "            raise ValueError(\"Both 'product_id' and 'category' columns must be present.\")\n",
-    "        return df\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"Error: The file {file_path} was not found.\")\n",
-    "    except ValueError as e:\n",
-    "        print(f\"Error: {e}\")\n",
+    "        data = pd.read_csv(file_path)\n",
+    "        if data.empty:\n",
+    "            raise ValueError(f\"Dataset at {file_path} is empty.\")\n",
+    "        if 'category' not in data.columns:\n",
+    "            raise ValueError(f\"'category' column is missing in {file_path}.\")\n",
+    "        return data\n",
     "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred: {e}\")\n",
+    "        print(f\"Error loading data from {file_path}: {e}\")\n",
+    "        return None\n",
     "\n",
-    "# Validate consistency in product categories between two datasets\n",
-    "def validate_category_consistency(df_A, df_B):\n",
-    "    \"\"\"Validate consistency of 'category' across two product datasets.\"\"\"\n",
-    "    # Merge datasets on 'product_id'\n",
-    "    merged_df = pd.merge(df_A[['product_id', 'category']], df_B[['product_id', 'category']], \n",
-    "                         on='product_id', suffixes=('_A', '_B'), how='inner')\n",
-    "    \n",
-    "    # Find discrepancies where categories don't match\n",
-    "    discrepancies = merged_df[merged_df['category_A'] != merged_df['category_B']]\n",
     "\n",
-    "    if not discrepancies.empty:\n",
-    "        print(f\"Found {len(discrepancies)} products with inconsistent categories.\")\n",
-    "        print(discrepancies)\n",
+    "# Function to merge two datasets on the 'product_id' column\n",
+    "def merge_datasets(products_A, products_B):\n",
+    "    \"\"\"\n",
+    "    Merge two product datasets on the 'product_id' column.\n",
+    "    \"\"\"\n",
+    "    return pd.merge(products_A, products_B, on='product_id', how='outer', suffixes=('_A', '_B'))\n",
+    "\n",
+    "\n",
+    "# Function to check if there are inconsistencies in the 'category' column after merging the datasets\n",
+    "def check_category_consistency(merged_data):\n",
+    "    \"\"\"\n",
+    "    Check if there are inconsistencies in the 'category' column after merging the datasets.\n",
+    "    \"\"\"\n",
+    "    inconsistent_data = merged_data[merged_data['category_A'] != merged_data['category_B']]\n",
+    "    return inconsistent_data\n",
+    "\n",
+    "\n",
+    "# Function to print inconsistent data (if any) or a message when no inconsistencies are found\n",
+    "def print_inconsistencies(inconsistent_data):\n",
+    "    if not inconsistent_data.empty:\n",
+    "        print(\"Inconsistent data found:\")\n",
+    "        print(inconsistent_data)\n",
     "    else:\n",
-    "        print(\"All product categories are consistent across both datasets.\")\n",
+    "        print(\"No inconsistencies found.\")\n",
     "\n",
-    "# Main code execution\n",
-    "file_A = 'products_A.csv'\n",
-    "file_B = 'products_B.csv'\n",
     "\n",
-    "# Load both product datasets\n",
-    "df_A = load_product_data(file_A)\n",
-    "df_B = load_product_data(file_B)\n",
+    "# Main function to execute the data consistency check\n",
+    "def run_data_consistency_check(file_A, file_B):\n",
+    "    \"\"\"\n",
+    "    Run the data consistency check between two datasets: file_A and file_B.\n",
+    "    \"\"\"\n",
+    "    # Load the datasets and validate\n",
+    "    products_A = load_and_validate_data(file_A)\n",
+    "    products_B = load_and_validate_data(file_B)\n",
     "\n",
-    "if df_A is not None and df_B is not None:\n",
-    "    # Validate consistency in the \"category\" column\n",
-    "    validate_category_consistency(df_A, df_B)\n"
+    "    if products_A is None or products_B is None:\n",
+    "        print(\"One of the datasets is invalid. Exiting the process.\")\n",
+    "        return\n",
+    "\n",
+    "    # Merge the datasets\n",
+    "    merged_data = merge_datasets(products_A, products_B)\n",
+    "\n",
+    "    # Check for category consistency\n",
+    "    inconsistent_data = check_category_consistency(merged_data)\n",
+    "\n",
+    "    # Print any inconsistencies\n",
+    "    print_inconsistencies(inconsistent_data)\n",
+    "\n",
+    "\n",
+    "# Example of how to run the consistency check with the provided CSV files\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_data_consistency_check('products_A.csv', 'products_B.csv')\n",
+    "\n"
    ]
   }
  ],
