--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_4.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_4.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +142,122 @@
     "if __name__ == \"__main__\":\n",
     "    run_data_consistency_check('products_A.csv', 'products_B.csv')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Unit Test 1: Test if merging works correctly\n",
+    "def test_merge_datasets():\n",
+    "    df_A = pd.DataFrame({'product_id': [1, 2], 'category': ['Electronics', 'Furniture']})\n",
+    "    df_B = pd.DataFrame({'product_id': [1, 2], 'category': ['Electronics', 'Office']})\n",
+    "    merged = merge_datasets(df_A, df_B)\n",
+    "    \n",
+    "    # Assert categories are consistent except for product_id 2\n",
+    "    assert merged[merged['product_id'] == 2]['category_A'].iloc[0] != merged[merged['product_id'] == 2]['category_B'].iloc[0]\n",
+    "\n",
+    "# Unit Test 2: Test if the function catches empty or invalid CSV paths\n",
+    "def test_load_and_validate_data():\n",
+    "    # Assuming valid file 'valid_file.csv' exists and invalid ones do not\n",
+    "    assert load_and_validate_data(\"valid_file.csv\") is not None\n",
+    "    assert load_and_validate_data(\"empty_file.csv\") is None\n",
+    "    assert load_and_validate_data(\"missing_column_file.csv\") is None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inconsistent data found:\n",
+      "   product_id category_A category_B\n",
+      "1           2   Clothing    Apparel\n",
+      "3           4       Toys       Kids\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Function to load CSV file and validate if the necessary columns exist and the dataset is not empty\n",
+    "def load_and_validate_data(file_path):\n",
+    "    \"\"\"\n",
+    "    Load CSV file and validate if the necessary columns exist and the dataset is not empty.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        data = pd.read_csv(file_path)\n",
+    "        if data.empty:\n",
+    "            raise ValueError(f\"Dataset at {file_path} is empty.\")\n",
+    "        if 'category' not in data.columns:\n",
+    "            raise ValueError(f\"'category' column is missing in {file_path}.\")\n",
+    "        return data\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading data from {file_path}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "# Function to merge two datasets on the 'product_id' column\n",
+    "def merge_datasets(products_A, products_B):\n",
+    "    \"\"\"\n",
+    "    Merge two product datasets on the 'product_id' column.\n",
+    "    \"\"\"\n",
+    "    return pd.merge(products_A, products_B, on='product_id', how='outer', suffixes=('_A', '_B'))\n",
+    "\n",
+    "\n",
+    "# Function to check if there are inconsistencies in the 'category' column after merging the datasets\n",
+    "def check_category_consistency(merged_data):\n",
+    "    \"\"\"\n",
+    "    Check if there are inconsistencies in the 'category' column after merging the datasets.\n",
+    "    \"\"\"\n",
+    "    inconsistent_data = merged_data[merged_data['category_A'] != merged_data['category_B']]\n",
+    "    return inconsistent_data\n",
+    "\n",
+    "\n",
+    "# Function to print inconsistent data (if any) or a message when no inconsistencies are found\n",
+    "def print_inconsistencies(inconsistent_data):\n",
+    "    if not inconsistent_data.empty:\n",
+    "        print(\"Inconsistent data found:\")\n",
+    "        print(inconsistent_data)\n",
+    "    else:\n",
+    "        print(\"No inconsistencies found.\")\n",
+    "\n",
+    "\n",
+    "# Main function to execute the data consistency check\n",
+    "def run_data_consistency_check(file_A, file_B):\n",
+    "    \"\"\"\n",
+    "    Run the data consistency check between two datasets: file_A and file_B.\n",
+    "    \"\"\"\n",
+    "    # Load the datasets and validate\n",
+    "    products_A = load_and_validate_data(file_A)\n",
+    "    products_B = load_and_validate_data(file_B)\n",
+    "\n",
+    "    if products_A is None or products_B is None:\n",
+    "        print(\"One of the datasets is invalid. Exiting the process.\")\n",
+    "        return\n",
+    "\n",
+    "    # Merge the datasets\n",
+    "    merged_data = merge_datasets(products_A, products_B)\n",
+    "\n",
+    "    # Check for category consistency\n",
+    "    inconsistent_data = check_category_consistency(merged_data)\n",
+    "\n",
+    "    # Print any inconsistencies\n",
+    "    print_inconsistencies(inconsistent_data)\n",
+    "\n",
+    "\n",
+    "# Example of how to run the consistency check with the provided CSV files\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_data_consistency_check('products_A.csv', 'products_B.csv')\n"
    ]
   }
  ],
