--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_9.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_9.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -64,31 +64,60 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the customer profile data (Assume customer_data.csv is available)\n",
-    "df = pd.read_csv('customer_data.csv')\n",
+    "def load_data(file_path):\n",
+    "    \"\"\"Loads data from a CSV file and handles exceptions.\"\"\"\n",
+    "    try:\n",
+    "        # Load the CSV with additional missing values represented by 'na', 'n/a'\n",
+    "        df = pd.read_csv(file_path, na_values=['na', 'n/a', ''])\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: The file {file_path} does not exist.\")\n",
+    "        return None\n",
+    "    except pd.errors.ParserError:\n",
+    "        print(\"Error: The file could not be parsed.\")\n",
+    "        return None\n",
     "\n",
-    "# List of required fields\n",
-    "required_fields = ['name', 'address', 'email', 'phone number']\n",
+    "def calculate_missing_data_percentage(df):\n",
+    "    \"\"\"Calculates the missing data percentage for required fields.\"\"\"\n",
+    "    required_fields = ['name', 'address', 'email', 'phone number']\n",
+    "    \n",
+    "    # Ensure required fields exist in the DataFrame\n",
+    "    for field in required_fields:\n",
+    "        if field not in df.columns:\n",
+    "            print(f\"Error: Missing required field: {field}\")\n",
+    "            return None\n",
+    "    \n",
+    "    # Check for missing data in each field\n",
+    "    missing_data = df[required_fields].isnull()\n",
+    "    \n",
+    "    # Calculate the number of missing values per field\n",
+    "    missing_per_field = missing_data.sum()\n",
+    "    \n",
+    "    # Calculate the total number of profiles\n",
+    "    total_profiles = len(df)\n",
+    "    \n",
+    "    # Calculate the percentage of missing data per field\n",
+    "    missing_percentage = (missing_per_field / total_profiles) * 100\n",
+    "    \n",
+    "    # Calculate the overall percentage of profiles with missing data in any required field\n",
+    "    missing_profiles = missing_data.any(axis=1).sum()\n",
+    "    missing_data_percentage = (missing_profiles / total_profiles) * 100\n",
+    "    \n",
+    "    return missing_percentage, missing_data_percentage\n",
     "\n",
-    "# Check for missing data in each field\n",
-    "missing_data = df[required_fields].isnull()\n",
+    "def main():\n",
+    "    # Load the data\n",
+    "    df = load_data('customer_data.csv')\n",
+    "    if df is not None:\n",
+    "        # Calculate missing data percentages\n",
+    "        missing_percentage, missing_data_percentage = calculate_missing_data_percentage(df)\n",
+    "        \n",
+    "        if missing_percentage is not None:\n",
+    "            print(f\"Missing data percentage per field:\\n{missing_percentage}\")\n",
+    "            print(f\"Overall percentage of profiles with missing data: {missing_data_percentage:.2f}%\")\n",
     "\n",
-    "# Calculate the number of missing values per field\n",
-    "missing_per_field = missing_data.sum()\n",
-    "\n",
-    "# Calculate the total number of profiles\n",
-    "total_profiles = len(df)\n",
-    "\n",
-    "# Calculate the percentage of missing data per field\n",
-    "missing_percentage = (missing_per_field / total_profiles) * 100\n",
-    "\n",
-    "# Calculate the overall percentage of profiles with missing data in any required field\n",
-    "missing_profiles = missing_data.any(axis=1).sum()\n",
-    "missing_data_percentage = (missing_profiles / total_profiles) * 100\n",
-    "\n",
-    "# Display the results\n",
-    "print(f\"Missing data percentage per field:\\n{missing_percentage}\")\n",
-    "print(f\"Overall percentage of profiles with missing data: {missing_data_percentage:.2f}%\")\n"
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
